removing registration (#29)
